# vertretungsdings

./: .env.example  .gitignore  README.md  docker-compose.yml  example-plan.json
sql/: create_tables.sql
vertretungsapi/: .dockerignore  Cargo.toml  Dockerfile
vertretungsapi/src/: check_loop.rs  create_weeks_list.rs  main.rs
vertretungsapi/src/vertretundsdings/: mod.rs  vertretungsdings.rs
vertretungsbot/: Cargo.toml  Dockerfile
vertretungsbot/src/: main.rs
vertretungsbot/src/commands/: checker.rs  mod.rs  send_plan.rs  setter.rs  update.rs
vertretungsbot/src/vertretung/: vertretungsdings.rs
