[package]
name = "vertretungsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-identity = "0.5.2"
actix-web = "4.3.1"
chrono = "0.4.23"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
prettytable-rs = "0.10.0"
reqwest = "0.11.14"
scraper = "0.15.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-actix-native-tls"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = "0.7.7"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
