[package]
name = "vertretungsbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.28"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "rustls-native-certs",
  "rustls-tls-native-roots",
  "rustls-tls-manual-roots",
] }
scraper = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serenity = { version = "0.11.5", features = ["rustls_backend"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
